--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
     "description": "Says \"Hello World!\" in a random human language, on a random background color. It's a PWA, so you can try it in your browser, and add it to your home screen.",
     "short_name": "Hello World",
     "scope": "/site/",
-    "start_url": "/site/index.html",
+    "start_url": "/index.html",
     "display": "standalone",
     "orientation": "any",
     "theme_color": "#000000",
